--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <a href="#">How it works <i class="fa-solid fa-angle-down" style="font-size: 16px;"></i></a>
                     <a href="#"><span class="cmp">Company</span></a>
                 </div>
-                <div>
-                    <button class="login-btn">Log in</button>
+                <div class="signinnup">
+                    <button class="login-btn">Log in</button> &nbsp; &nbsp;
                     <button class="signup-btn">Sign up</button>
                 </div>
             </nav>
@@ -108,7 +108,7 @@
                     <p>"Great app, Love the visuals. Just waiting for dark mode and more currency options."</p>
                     <h3>- Emeka T.</h3>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-card1">
                     <img src="./assets/Images/ix_user-profile-filled.png">
                     <div>
                         <i class="fa-solid fa-star"></i>
@@ -138,7 +138,7 @@
 
         <div class="faq">
             <div class="faq-body">
-                <h1>FAQ</h1>
+                <h1>FAQs</h1>
                 <div class="faq-content">
                     <div>
                         <p>"Is Track Wise free?"</p>
@@ -175,6 +175,7 @@
                 <img src="./assets/Images/ri_instagram-fill.png" alt="">
                 <img src="./assets/Images/uiw_facebook.png" alt="">
             </div>
+            <div> <img src="./assets/Images/Actions.png"> </div>
             <img src="./assets/Images/Group.png" alt="">
             <div style="display: flex; gap: 0.5rem;">
                 <i class="fas fa-phone call-icon"></i>
