--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>TrackWISE</title>
     <link rel="stylesheet" href="styles/styles.css">
 
+    <!-- The CSS link below is only for the stars in the Testimonial page and the two down arrows in the nav section.  -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -15,7 +17,7 @@
     <main>
         <div class="hero">
             <nav class="header">
-                <div class="logo"> <img src="./assets/Images/logo.png "></div>
+                <div class="logo"> <img src="./assets/Images/logo.png " alt="Company Logo"></div>
                 <div class="navlinks">
                     <a href="#">Features <i class="fa-solid fa-angle-down" style="font-size: 16px;"></i></a>
                     <a href="#">How it works <i class="fa-solid fa-angle-down" style="font-size: 16px;"></i></a>
@@ -34,11 +36,12 @@
                     financial goals.</p>
 
                 <div class="action">
-                    <img class="div1rightback" src="./assets/Images/Actions.png" style="width: 300px;">
+                    <img class="div1rightback" src="./assets/Images/Actions.png" alt="Google Play and Apple store logo"
+                        style="width: 300px;">
                 </div>
             </div>
 
-            <img class="laptop" src="./assets/Images/mobile-and-screen.png">
+            <img class="laptop" src="./assets/Images/mobile-and-screen.png" alt="mobile-and-screen image">
             <div class="hero-shape"></div>
 
 
@@ -49,29 +52,29 @@
                 <h1>Our Features</h1>
                 <div class="card-container">
                     <div class="card" id="card1">
-                        <img src="./assets/Images/mingcute_paper-fill.png">
+                        <img src="./assets/Images/mingcute_paper-fill.png" alt="An icon">
                         <h3>Income & Expenses Tracking</h3>
                         <p>Easily log what you earn and spend, and stay within your budget</p>
                     </div>
                     <div class="card" id="card2">
-                        <img src="./assets/Images/uis_chart.png">
+                        <img src="./assets/Images/uis_chart.png" alt="An icon">
                         <h3>Visual Reports</h3>
                         <p>Get graphs and weekly summaries to better understand your finances</p>
                     </div>
                     <div class="card" id="card2">
-                        <img src="./assets/Images/bxs_notification.png">
+                        <img src="./assets/Images/bxs_notification.png" alt="An icon">
                         <h3>Smart Reminders</h3>
                         <p>Set alerts to log spending or check your weekly budget.</p>
                     </div>
                     <div class="card" id="card1">
-                        <img src="./assets/Images/mdi_head-idea.png">
+                        <img src="./assets/Images/mdi_head-idea.png" alt="An Icon">
                         <h3>Financial Insights</h3>
                         <p>Receive intelligent tips based on your habits.</p>
                     </div>
                 </div>
             </div>
 
-            <img class="phone" src="./assets/Images/phone.png">
+            <img class="phone" src="./assets/Images/phone.png" alt="Mobile phone image">
             <div class="feature-shape"></div>
         </div>
 
@@ -90,7 +93,7 @@
                 </div>
             </div>
 
-            <img class="phone2" src="./assets/Images/phone2.png">
+            <img class="phone2" src="./assets/Images/phone2.png" alt="Phone image">
             <div class="howItWorks-shape"></div>
         </div>
 
@@ -98,7 +101,7 @@
             <h1>Testimonials</h1>
             <div class="testimonial-body">
                 <div class="testimonial-card2">
-                    <img src="./assets/Images/ix_user-profile-filled.png">
+                    <img src="./assets/Images/ix_user-profile-filled.png" alt="A profile Icon">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -109,7 +112,7 @@
                     <h3>- Emeka T.</h3>
                 </div>
                 <div class="testimonial-card1">
-                    <img src="./assets/Images/ix_user-profile-filled.png">
+                    <img src="./assets/Images/ix_user-profile-filled.png" alt="A profile Icon">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -122,7 +125,7 @@
                     <h3>- Jasmine U.</h3>
                 </div>
                 <div class="testimonial-card2">
-                    <img src="./assets/Images/ix_user-profile-filled.png">
+                    <img src="./assets/Images/ix_user-profile-filled.png" alt="A profile Icon">
                     <div>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -142,23 +145,23 @@
                 <div class="faq-content">
                     <div>
                         <p>"Is Track Wise free?"</p>
-                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="">
+                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="A down arrow icon">
                     </div>
                     <div>
                         <p>"Can I use it offline?"</p>
-                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="">
+                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="A down arrow icon">
                     </div>
                     <div>
                         <p>"Can I use it offline?"</p>
-                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="">
+                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="A down arrow icon">
                     </div>
                     <div>
                         <p>"Is my data secure?"</p>
-                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="">
+                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="A down arrow icon">
                     </div>
                     <div>
                         <p>"Does it work on Android & iOS?"</p>
-                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="">
+                        <img src="./assets/Images/solar_round-arrow-down-bold.png" alt="A down arrow icon">
                     </div>
                 </div>
             </div>
@@ -166,21 +169,23 @@
             <div class="faq-shape"></div>
         </div>
 
+        <!-- I decided to use few inline CSS for the fotter section -->
+
         <div class="footer">
-            <img class="footer-logo" src="./assets/Images/Logo.png" alt="">
-            <p style="font-size: 20px;">Track<span style="font-weight: bold;">WISE</span></p>
-            <h2>Your financial clarity starts here</h2>
+            <img class="footer-logo" src="./assets/Images/Logo.png" alt="Company Logo">
+            <p style="font-size: 33px;">Track<span style="font-weight: bold;">WISE</span></p>
+            <h1>Your financial clarity starts here</h1>
             <div class="handles">
-                <img src="./assets/Images/x-logo.png" alt="">
-                <img src="./assets/Images/ri_instagram-fill.png" alt="">
-                <img src="./assets/Images/uiw_facebook.png" alt="">
+                <img src="./assets/Images/x-logo.png" alt="X icon">
+                <img src="./assets/Images/ri_instagram-fill.png" alt="Instagram icon">
+                <img src="./assets/Images/uiw_facebook.png" alt="Facebook icon">
             </div>
-            <div> <img src="./assets/Images/Actions.png"> </div>
-            <img src="./assets/Images/Group.png" alt="">
+            <div> <img src="./assets/Images/Actions.png" alt="Aplpl store and Googole play icon"> </div>
             <div style="display: flex; gap: 0.5rem;">
                 <i class="fas fa-phone call-icon"></i>
-                <h3>Contact Support</h3>
+                <h1>Contact Support</h1>
             </div>
+            <br>
 
             <div class="urls">
                 <a href="#">About</a>
