Added alt value to all images and icons used

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <!-- I decided to use few inline CSS for the fotter section -->
 
         <div class="footer">
-            <img class="footer-logo" src="./assets/Images/Logo.png" alt="Company Logo">
+            <img class="footer-logo" src="./assets/Images/logo.png" alt="Company Logo">
             <p style="font-size: 33px;">Track<span style="font-weight: bold;">WISE</span></p>
             <h1>Your financial clarity starts here</h1>
             <div class="handles">
